Autor link overlap fix

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -98,7 +98,7 @@ section
   padding-top: calc(47px + 20px)
   a
     position: absolute
-    top: 90%
+    top: 85%
     left: 20px
 
 .section-two
